gcc/testsuite/algol60.dg/fail/array3.a60
'comment' { dg-do compile } ;
'begin'
 'integer' 'array' b[5]; 'comment' { dg-error "syntax error" } ;
'end';
